--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
       content="Web site created using create-react-app"
     />
     <title>Frontier Exercise</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Prompt:wght@500&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
